nuxt-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-app-service
spec:
  selector:
    app: nuxt-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
