nuxt-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: services-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /nuxt-app
            pathType: Prefix
            backend:
              service:
                name: nuxt-app-service
                port:
                  number: 80
